--- a/project/templates/contact.html
+++ b/project/templates/contact.html
@@ -1,1 +1,12 @@
 {% extends "base.html" %}
+{% load static %}
+
+{% block title %}
+contact
+{% endblock title %}
+
+{% block body %}
+
+
+
+{% endblock body %}
