--- a/project/templates/base.html
+++ b/project/templates/base.html
@@ -7,7 +7,7 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <title>
     {% block tittle %}
-    base
+    
     {% endblock tittle %}
   </title>
   <meta name="description" content="">
@@ -107,14 +107,12 @@
     </div>
   </header>
 
-  {% block header %}
-  
-  {% endblock header %}
+
   
   <main class="main">
-   {% block content %}
+   {% block body %}
    
-   {% endblock content %}
+   {% endblock body %}
 
   </main>
 
