--- a/project/templates/alumni.html
+++ b/project/templates/alumni.html
@@ -7,7 +7,7 @@ alumni page
 
 {% block body %}
 
-    <div class="page-title dark-background" style="{% static 'background-image: url(assets/img/education/showcase-1.webp);' %}">
+    <div class="page-title dark-background" style="background-image: url({% static 'assets/img/education/showcase-1.webp' %});">
       <div class="container position-relative">
         <h1>Alumni</h1>
         <p>Esse dolorum voluptatum ullam est sint nemo et est ipsa porro placeat quibusdam quia assumenda numquam molestias.</p>
