--- a/project/templates/base.html
+++ b/project/templates/base.html
@@ -56,18 +56,18 @@
 
       <nav id="navmenu" class="navmenu">
         <ul>
-          <li><a href="/home">Home</a></li>
+          <li><a href="/">Home</a></li>
           <li class="dropdown"><a href="/about"><span>About</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
             <ul>
               <li><a href="/about">About Us</a></li>
-              <li><a href="/admission">Admissions</a></li>
+              <li><a href="/admision">Admissions</a></li>
               <li><a href="/academics">Academics</a></li>
               <li><a href="/staff">Faculty &amp; Staff</a></li>
               <li><a href="/institution_facilities">Campus &amp; Facilities</a></li>
             </ul>
           </li>
 
-          <li><a href="/students_life">Students Life</a></li>
+          <li><a href="/student_life">Students Life</a></li>
           <li><a href="/news">News</a></li>
           <li><a href="/event">Events</a></li>
           <li><a href="/alumni">Alumni</a></li>
